--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,26 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~bootstrap-scss/functions";
+@import "~bootstrap-scss/variables";
+@import "~bootstrap-scss/mixins";
+@import "~bootstrap-scss/root";
+@import "~bootstrap-scss/reboot";
+@import "~bootstrap-scss/type";
+@import "~bootstrap-scss/grid";
+
+body {
+  background-color: #F3F7FA;
+  color: #4A4A4A;
+}
+
+.container {
+  @extend .container;
+  width: 960px;
+  position: relative;
+}
+
+ul {
+  padding: 0;
+
+  li {
+    list-style-type: none;
+  }
+}
