--- a/src/app/ticket-list/ticket-list.component.html
+++ b/src/app/ticket-list/ticket-list.component.html
@@ -1,7 +1,7 @@
-<div class="">
+<div class="ticket-list">
   <app-ticket></app-ticket>
   <app-ticket></app-ticket>
   <app-ticket></app-ticket>
 
-  <button>Показать еще 5 билетов!</button>
+  <button class="show-more">Показать еще 5 билетов!</button>
 </div>
