--- a/src/app/ticket/ticket.component.scss
+++ b/src/app/ticket/ticket.component.scss
@@ -1,7 +1,9 @@
+@import "../variables";
+
 .ticket {
-  background: #fff;
-  border: 1px solid #DFE5EC;
-  border-radius: 5px;
+  background: $white;
+  border: 1px solid $border-color-grey;
+  border-radius: $border-radius;
   margin-bottom: 20px;
   padding: 20px;
   box-shadow: 0 2px 2px rgb(0 0 0 / 5%), 0 4px 4px rgb(0 0 0 / 5%);
@@ -11,7 +13,7 @@
   }
 
   &-price {
-    color: #2F80ED;
+    color: $blue;
     font-size: 22px;
     text-transform: uppercase;
     font-weight: 700;
@@ -28,7 +30,9 @@
   &-info {
     & .top {
       text-transform: uppercase;
-      color: #A0B0B9;
+      color: lighten($grey, 8%);
+      font-weight: 500;
+      font-size: 13px;
     }
 
     & .bottom {
