--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,9 +6,12 @@
 @import "~bootstrap-scss/type";
 @import "~bootstrap-scss/grid";
 
+@import "app/variables";
+
 body {
   background-color: #F3F7FA;
-  color: #4A4A4A;
+  color: $black;
+  font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 }
 
 .container {
