Added filter component

--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -6,6 +6,8 @@ $grey: #A0B0B9;
 
 $border-color-grey: #DFE5EC;
 
-$border-radius: 7px;
+$border-radius: 5px;
 
 $bg-color-active-hover: lighten($blue, 41%);
+
+$box-shadow: 0 2px 2px rgb(0 0 0 / 3%), 0 4px 4px rgb(0 0 0 / 3%);
