--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,30 +1,6 @@
 <div class="board row">
   <div class="col-md-4">
-    <div class="filter">
-      <span>Количество пересадок</span>
-      <ul>
-        <li>
-          <input type="checkbox"/>
-          <label for="">Все</label>
-        </li>
-        <li>
-          <input type="checkbox" checked/>
-          <label for="">Без пересадок</label>
-        </li>
-        <li>
-          <input type="checkbox" checked/>
-          <label for="">1 пересадка</label>
-        </li>
-        <li>
-          <input type="checkbox" checked/>
-          <label for="">2 пересадки</label>
-        </li>
-        <li>
-          <input type="checkbox"/>
-          <label for="">3 пересадки</label>
-        </li>
-      </ul>
-    </div>
+    <app-filter></app-filter>
   </div>
   <div class="col-md-8">
     <app-tabs></app-tabs>
