--- a/src/app/ticket/ticket.component.scss
+++ b/src/app/ticket/ticket.component.scss
@@ -6,7 +6,7 @@
   border-radius: $border-radius;
   margin-bottom: 20px;
   padding: 20px;
-  box-shadow: 0 2px 2px rgb(0 0 0 / 5%), 0 4px 4px rgb(0 0 0 / 5%);
+  box-shadow: $box-shadow;
 
   &-header {
     margin-bottom: 25px;
