Added mock data and fix styles

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -4,6 +4,6 @@
   </div>
   <div class="col-md-8">
     <app-tabs></app-tabs>
-    <app-ticket-list></app-ticket-list>
+    <app-ticket-list [tickets]="tickets"></app-ticket-list>
   </div>
 </div>
