--- a/src/app/filter/filter.component.scss
+++ b/src/app/filter/filter.component.scss
@@ -5,7 +5,7 @@
     margin: 0;
     display: block;
     cursor: pointer;
-    padding: 10px 20px;
+    padding: 8px 20px;
 
     & > input {
       position: absolute;
@@ -19,6 +19,7 @@
       align-items: center;
       user-select: none;
       cursor: pointer;
+      font-size: 14px;
 
       &::before {
         content: '';
