--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
 <div class="container">
-  <app-board></app-board>
+  <div class="board row">
+    <div class="col-md-4">
+      <app-filter></app-filter>
+    </div>
+    <div class="col-md-8">
+      <app-tabs></app-tabs>
+      <app-ticket-list [tickets]="tickets"></app-ticket-list>
+    </div>
+  </div>
 </div>
