Refactoring ticket component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="col-md-8">
       <app-tabs></app-tabs>
-      <app-ticket-list [tickets]="tickets"></app-ticket-list>
+      <app-ticket-list></app-ticket-list>
     </div>
   </div>
 </div>
